# taxonoviz

./: .gitignore  CMakeLists.txt  README.md  compile.sh  memo  onto  sdsonto  sonto  ssonto  sub.py  taxo  todel.md
mem/: fod  fod.dot  fok  fok.dot
src/: lexical.l  main.cc  syntaxic.y  taxonomy.cc  taxonomy.hh
